<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipChildren="false"
    android:orientation="vertical"
    android:weightSum="2"
    tools:context="pl.com.wordsweb.ui.fragments.LearnFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/blue_default"
        android:layout_weight="1"
        android:background="@drawable/blue_half_background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/colorMainBackground"
        android:orientation="horizontal">

        <TableLayout
            android:id="@+id/congrats_card_layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/super_large_table_layout"
            android:layout_marginEnd="@dimen/medium_margin"
            android:layout_marginLeft="@dimen/medium_margin"
            android:layout_marginRight="@dimen/medium_margin"
            android:layout_marginStart="@dimen/medium_margin"
            android:layout_marginTop="-200dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="250dp"
                android:layout_marginTop="50dp"
                android:background="@drawable/shadow_card">


                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TableRow
                        android:layout_marginEnd="@dimen/big_margin"
                        android:layout_marginLeft="@dimen/big_margin"
                        android:layout_marginRight="@dimen/big_margin"
                        android:layout_marginStart="@dimen/big_margin"
                        android:layout_marginTop="30dp">

                        <TextView
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/congrats"
                            android:textSize="@dimen/list_title" />


                    </TableRow>

                    <TableRow
                        android:layout_marginEnd="@dimen/big_margin"
                        android:layout_marginLeft="@dimen/big_margin"
                        android:layout_marginRight="@dimen/big_margin"
                        android:layout_marginStart="@dimen/big_margin"
                        android:layout_marginTop="10dp">

                        <TextView
                            android:id="@+id/right_answers_text_view"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:gravity="end"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/big_card_number" />

                        <TextView
                            android:id="@+id/right_answers_description_text_view"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="15dp"
                            android:layout_marginStart="15dp"
                            android:layout_weight="0.6"
                            android:gravity="start"
                            android:text="@string/right_answers"
                            android:textSize="@dimen/big_card_description"
                            android:visibility="gone"/>

                    </TableRow>

                    <TableRow
                        android:layout_marginEnd="@dimen/big_margin"
                        android:layout_marginLeft="@dimen/big_margin"
                        android:layout_marginRight="@dimen/big_margin"
                        android:layout_marginStart="@dimen/big_margin"
                        android:layout_marginTop="-30dp">

                        <TextView
                            android:id="@+id/wrong_answers_description_text_view"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:layout_marginEnd="15dp"
                            android:layout_marginRight="15dp"
                            android:layout_weight="0.6"
                            android:gravity="top|end"
                            android:paddingTop="30dp"
                            android:text="@string/wrong_answers"
                            android:textSize="@dimen/big_card_description"
                            android:visibility="gone"/>

                        <TextView
                            android:id="@+id/wrong_answers_text_view"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.4"
                            android:gravity="start"
                            android:textColor="@color/colorAccentYellow"
                            android:textSize="@dimen/big_card_number"

                            />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp">

                <Button
                    android:id="@+id/congrats_button_go_back"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginRight="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_weight="0.3"
                    android:background="@drawable/shadow_card_yellow"
                    android:drawableTop="@drawable/ic_arrow_back_24dp"
                    android:paddingTop="10dp"
                    android:text="@string/back"
                    android:textAllCaps="false"
                    android:textColor="@color/colorCardBackground" />

                <Button
                    android:id="@+id/congrats_button_quiz"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginRight="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_weight="0.3"
                    android:background="@drawable/shadow_card_blue"
                    android:drawableTop="@drawable/question_white_48"
                    android:paddingTop="10dp"
                    android:text="@string/title_module_quizzes"
                    android:textAllCaps="false"
                    android:textColor="@color/colorCardBackground" />

                <Button
                    android:id="@+id/congrats_button_again"
                    android:layout_width="0dp"
                    android:layout_height="90dp"
                    android:layout_marginEnd="@dimen/small_margin"
                    android:layout_marginLeft="@dimen/small_margin"
                    android:layout_marginRight="@dimen/small_margin"
                    android:layout_marginStart="@dimen/small_margin"
                    android:layout_weight="0.3"
                    android:background="@drawable/shadow_card_green"
                    android:drawableTop="@drawable/ic_fast_forward_black_48px"
                    android:paddingTop="10dp"
                    android:text="@string/again"
                    android:textAllCaps="false"
                    android:textColor="@color/colorCardBackground"
                    android:tint="@color/colorCardBackground" />

            </TableRow>


        </TableLayout>

    </LinearLayout>

</LinearLayout>